Add meta tags to index.html for link previews

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>FPL Tracker</title>
+    <meta
+      name="description"
+      content="FPL League tracker for team standings. Follow your team and league "
+    />
+    <meta property="og:title" content="FPL 2018/19" />
+    <meta
+      property="og:description"
+      content="Keep up with your team and leagues in the Official FPL."
+    />
+    <meta property="og:url" content="https://fpl-tracker.netlify.com/" />
+    <meta
+      property="og:image"
+      content="<%= require('../src/ui/assets/trackerLogo.jpg') %>"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
